# CodeAct-Demo

./: .gitignore  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  analyze_sample_ru.py  debug_location.py  pyproject.toml  sample.ru
backend/app/: codeact_sandbox.py  config.py  main.py  sse.py
backend/app/agent/: flow.py
backend/app/agent/tools/: RU.py  convert_node.py  convert_to_csv.py  convert_to_json.py  convert_to_xml.py  fallback_node.py  ru_parser.py  s3_fetcher.py  s3_loader.py  viz_node.py
backend/app/data/: metadata.json  variables_map.json
backend/app/models/: bedrock_client.py  openai_client.py
backend/app/services/: data_loader.py
backend/app/utils/: country_resolver.py  ru_utils.py
backend/tests/: conftest.py  test_code_execution.py  test_codeact_e2e.py  test_config.py  test_convert_node.py  test_country_resolver.py  test_fallback.py  test_openai.py  test_prompt.py  test_ru_utils.py  test_viz_node.py
backend/tests/data/: sample.ru
backend/tests/data/441000205/: location.json
docs/: codeact_fallback.md
frontend/: Dockerfile
frontend/src/app/: page.tsx
frontend/src/components/: Progress.tsx
frontend/src/lib/: agent.ts
